feat: complated header frame

--- a/public/CSS/command.css
+++ b/public/CSS/command.css
@@ -1,3 +1,26 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+
+.container {
+  position: relative;
+  width: 1320px;
+  height: auto;
+  display: flex;
+}
+
+/* NAVBAR */
+
 .navbar_frame {
   position: relative;
   width: 100%;
@@ -8,16 +31,12 @@
   background: rgb(68, 50, 151);
 }
 
-.container {
-  position: relative;
+.navbar_frame .container {
   padding: 20px 0px 14px;
-  width: 1320px;
-  height: auto;
-  display: flex;
   flex-direction: column;
 }
 
-.navbar_top {
+.navbar_frame .navbar_top {
   width: 100%;
   height: 50px;
 
@@ -25,7 +44,7 @@
   flex-direction: row;
 }
 
-.navbar_top .search_box {
+.navbar_frame .navbar_top .search_box {
   padding: 10px 17px;
   width: auto;
   height: auto;
@@ -34,7 +53,7 @@
   align-items: center;
 }
 
-.search_box .category_list {
+.navbar_frame .search_box .category_list {
   width: 166px;
   height: 30px;
   border-right: 1px solid rgb(214, 214, 214);
@@ -50,13 +69,13 @@
   letter-spacing: 0%;
   text-align: left;
 }
-.navbar_top > a img {
+.navbar_frame .navbar_top > a img {
   height: 36px;
   width: 117px;
   margin-right: 76px;
 }
 
-.navbar_top .nav_search_frame {
+.navbar_frame .navbar_top .nav_search_frame {
   width: 650px;
   height: 50px;
 
@@ -67,7 +86,7 @@
   border-radius: 6px;
 }
 
-.category_list select {
+.navbar_frame .category_list select {
   width: 140px;
   height: 30px;
 
@@ -83,7 +102,7 @@
   text-align: left;
 }
 
-.search_box input {
+.navbar_frame .search_box input {
   margin-left: 12px;
   width: 387px;
   height: 22px;
@@ -92,7 +111,7 @@
   outline: none;
 }
 
-.nav_search_frame .search_icon_box {
+.navbar_frame .nav_search_frame .search_icon_box {
   width: 50px;
   height: 50px;
   border-radius: 6px 6px 6px 6px;
@@ -103,12 +122,12 @@
   align-items: center;
 }
 
-.search_icon_box img {
+.navbar_frame .search_icon_box img {
   width: 20px;
   height: 20px;
 }
 
-.navbar_top .nav_top_menu {
+.navbar_frame .navbar_top .nav_top_menu {
   margin-left: 59px;
   width: 416px;
   height: 50px;
@@ -118,14 +137,14 @@
   justify-content: space-between;
 }
 
-.nav_top_menu .top_menu_box {
+.navbar_frame .nav_top_menu .top_menu_box {
   display: flex;
   flex-direction: row;
   align-items: center;
   cursor: pointer;
 }
 
-.top_menu_box .box_icon_box {
+.navbar_frame .top_menu_box .box_icon_box {
   position: relative;
   width: 54px;
 
@@ -139,18 +158,18 @@
   border-radius: 6px;
 }
 
-.box_icon_box img {
+.navbar_frame .box_icon_box img {
   width: 22px;
   height: 22px;
 }
 
-.top_menu_box .box_info_box {
+.navbar_frame .top_menu_box .box_info_box {
   margin-left: 14px;
   display: flex;
   flex-direction: column;
 }
 
-.box_info_box span {
+.navbar_frame .box_info_box span {
   color: rgb(255, 255, 255);
   font-family: Jost;
   font-style: normal;
@@ -161,7 +180,7 @@
   text-align: left;
 }
 
-.box_info_box strong {
+.navbar_frame .box_info_box strong {
   color: rgb(255, 255, 255);
   font-family: Jost;
   font-style: normal;
@@ -173,7 +192,7 @@
   /* margin-left: 4px; */
 }
 
-.box_icon_box .bascket_count {
+.navbar_frame .box_icon_box .bascket_count {
   position: absolute;
   top: -2px;
   right: -2px;
@@ -195,7 +214,7 @@
   text-align: left;
 }
 
-.navbar_bott {
+.navbar_frame .navbar_bott {
   margin-top: 25px;
   width: 100%;
   height: 40px;
@@ -206,7 +225,7 @@
   border-top: 1px solid #5746a1;
 }
 
-.navbar_bott .nav_bott_menu_box {
+.navbar_frame .navbar_bott .nav_bott_menu_box {
   width: auto;
   height: auto;
   margin-right: 10px;
@@ -217,7 +236,7 @@
   position: relative;
 }
 
-.nav_bott_menu_box .browse_box {
+.navbar_frame .nav_bott_menu_box .browse_box {
   width: 185px;
   height: 30px;
 
@@ -227,13 +246,13 @@
   border-right: 1px solid #5746a1;
 }
 
-.browse_box img {
+.navbar_frame .browse_box img {
   width: 20px;
   height: 18px;
   margin-right: 10px;
 }
 
-.browse_box span {
+.navbar_frame .browse_box span {
   color: rgb(255, 255, 255);
   font-family: Jost;
   font-size: 16px;
@@ -243,13 +262,13 @@
   text-align: left;
 }
 
-.nav_bott_menu_box .navbar_route_menu {
+.navbar_frame .nav_bott_menu_box .navbar_route_menu {
   margin-left: 12px;
   display: flex;
   flex-direction: row;
 }
 
-.navbar_route_menu .router_menu {
+.navbar_frame .navbar_route_menu .router_menu {
   margin-right: 20px;
   width: auto;
   height: 41px;
@@ -257,7 +276,7 @@
   display: flex;
 }
 
-.router_menu a {
+.navbar_frame .router_menu a {
   color: rgb(255, 255, 255);
   font-family: Jost;
   font-size: 16px;
@@ -269,11 +288,11 @@
   text-decoration: none;
 }
 
-.router_menu a.active {
+.navbar_frame .router_menu a.active {
   color: #c8c64a;
 }
 
-.nav_bott_menu_box .sorting_menu {
+.navbar_frame .nav_bott_menu_box .sorting_menu {
   margin-left: 392px;
   display: flex;
   flex-direction: row;
@@ -282,7 +301,7 @@
   right: 100%;
 }
 
-.sorting_menu span {
+.navbar_frame .sorting_menu span {
   margin-left: 20px;
   color: rgb(255, 255, 255);
   font-family: Jost;
