--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -17,7 +17,7 @@
   flex-direction: row;
 }
 
-.container .header_left {
+.header_frame .container .header_left {
   padding: 15px;
   position: relative;
   width: 875px;
@@ -25,15 +25,16 @@
 
   background-color: rgb(0, 83, 246);
   background-image: url(../images/Shop/Rectangle\ 55.png);
+  border-radius: 5px;
 }
 
-.header_left .header_content {
+.header_frame .header_left .header_content {
   margin-top: 90px;
   display: flex;
   flex-direction: column;
 }
 
-.header_content div {
+.header_frame .header_content div {
   /* position: absolute; */
   width: 104px;
   height: 30px;
@@ -53,7 +54,7 @@
   text-align: left;
 }
 
-.header_content span {
+.header_frame .header_content span {
   width: 428px;
   height: 152px;
   flex-shrink: 0;
@@ -65,7 +66,7 @@
   line-height: normal;
 }
 
-.header_content p {
+.header_frame .header_content p {
   color: var(--Bg-White, #fff);
 
   /* 16/Regular */
@@ -76,7 +77,7 @@
   line-height: 28px; /* 175% */
 }
 
-.header_content a {
+.header_frame .header_content a {
   margin-top: 20px;
   width: 140px;
   height: 52px;
@@ -94,12 +95,12 @@
   background-color: #fff;
 }
 
-.header_content img {
+.header_frame .header_content img {
   position: absolute;
   right: 10px;
 }
 
-.container .header_right {
+.header_frame .container .header_right {
   margin-left: 20px;
   position: relative;
   display: flex;
@@ -107,7 +108,7 @@
   justify-content: space-between;
 }
 
-.header_right .header_box {
+.header_frame .header_right .header_box {
   width: 422px;
   height: 240px;
 
@@ -116,7 +117,7 @@
   background: rgb(242, 242, 242);
 }
 
-.header_box .box_left {
+.header_frame .header_box .box_left {
   border-radius: 5px;
   margin-left: 30px;
   width: 50%;
@@ -127,7 +128,7 @@
   justify-content: center;
 }
 
-.box_left span {
+.header_frame .box_left span {
   color: #0053f6;
 
   /* 15 / Regular */
@@ -138,7 +139,7 @@
   line-height: 22px; /* 146.667% */
 }
 
-.box_left p {
+.header_frame .box_left p {
   margin: 10px 0;
   color: rgb(4, 30, 66);
   font-family: Jost;
@@ -149,7 +150,7 @@
   text-align: left;
 }
 
-.box_left a {
+.header_frame .box_left a {
   color: rgb(4, 30, 66);
   font-family: Jost;
   font-size: 15px;
@@ -159,7 +160,7 @@
   /* text-align: center; */
 }
 
-.box_left .hover_boder {
+.header_frame .box_left .hover_boder {
   display: flex;
   width: 122.303px;
   height: 27px;
@@ -174,11 +175,68 @@
   box-shadow: 0px 5px 20px 0px rgba(245, 195, 75, 0.15);
 }
 
-.header_box .box_right {
+.header_frame .header_box .box_right {
   width: 50%;
 }
 
-.box_right img {
+.header_frame .box_right img {
   width: 100%;
   height: 100%;
+}
+
+/* SERVIS */
+
+.home_page .servic_frame {
+  position: relative;
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+}
+
+.servic_frame .container {
+  flex-direction: row;
+}
+
+.servic_frame .container .servic_box {
+  width: 25%;
+  height: 86px;
+
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.servic_frame .servic_box img {
+  margin-top: 7px;
+  width: 32px;
+  height: 24px;
+  background-size: cover;
+}
+
+.servic_frame .servic_box .servic_content {
+  margin-left: 14px;
+  display: flex;
+  flex-direction: column;
+}
+
+.servic_frame .servic_content span {
+  color: var(--Color-Text-Dark, #041e42);
+
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+.servic_frame .servic_content p {
+  color: var(--Color-Text-Light, #626974);
+
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 146.667% */
 }
