--- a/public/CSS/command.css
+++ b/public/CSS/command.css
@@ -54,6 +54,45 @@ p {
   display: flex;
 }
 
+/* PAGINATION */
+.container .pagination_box {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .pagination_box .pagination_main {
+  width: 160px;
+  height: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pagination_main img {
+  cursor: pointer;
+}
+
+.container .pagination_box .pagination_main .pagination_dot {
+  display: flex;
+  flex-direction: row;
+}
+
+.container .pagination_box .pagination_dot .dot {
+  width: auto;
+  height: 20px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* NAVBAR */
 
 .navbar_frame {
@@ -420,8 +459,9 @@ p {
   font-weight: 500;
   line-height: 28px;
 }
+/* SELLING PRODUCT */
 
-.container .product_wrapper {
+.selling_product_frame .container .product_wrapper {
   display: flex;
   flex-direction: row;
   position: relative;
@@ -431,17 +471,18 @@ p {
   justify-content: space-between;
 }
 
-.product_wrapper .next_prev_box {
-  margin-left: 10px;
+.selling_product_frame .product_wrapper .next_prev_box {
   width: 25px;
+  cursor: pointer;
 }
 
-.next_prev_box img {
+.selling_product_frame .next_prev_box img {
   position: absolute;
   top: 50%;
+  margin-left: 10px;
 }
 
-.product_wrapper .product_boxes {
+.selling_product_frame .product_wrapper .product_boxes {
   position: relative;
   width: 1224px;
   height: 452px;
@@ -450,7 +491,7 @@ p {
   flex-direction: row;
 }
 
-.product_boxes .product_box {
+.selling_product_frame .product_boxes .product_box {
   width: 306px;
   height: 100%;
 
@@ -459,12 +500,12 @@ p {
   /* cursor: pointer; */
 }
 
-.product_box .product_image_box {
+.selling_product_frame .product_box .product_image_box {
   width: 100%;
   height: 280px;
 }
 
-.product_image_box .hover_box {
+.selling_product_frame .product_image_box .hover_box {
   display: none;
   width: 100%;
   height: 100%;
@@ -474,11 +515,11 @@ p {
   align-items: center;
 }
 
-.product_image_box:hover .hover_box {
+.selling_product_frame .product_image_box:hover .hover_box {
   display: flex;
 }
 
-.hover_box button {
+.selling_product_frame .hover_box button {
   margin-bottom: 10px;
   width: 260px;
   height: 50px;
@@ -501,14 +542,14 @@ p {
   box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
 }
 
-.product_box .product_content_box {
+.selling_product_frame .product_box .product_content_box {
   padding: 5px 22px;
   width: 100%;
   height: auto;
   box-sizing: border-box;
 }
 
-.product_content_box .product_title {
+.selling_product_frame .product_content_box .product_title {
   color: var(--Color-Text-Light, #626974);
   font-family: Jost;
   font-size: 13px;
@@ -518,7 +559,7 @@ p {
   text-transform: uppercase;
 }
 
-.product_content_box .product_disc {
+.selling_product_frame .product_content_box .product_disc {
   margin-top: 7px;
   height: 56px;
   overflow: hidden;
@@ -533,18 +574,18 @@ p {
   line-height: 28px; /* 175% */
 }
 
-.product_content_box .review_box {
+.selling_product_frame .product_content_box .review_box {
   margin-top: 7px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.review_box img {
+.selling_product_frame .review_box img {
   margin-left: 5px;
 }
 
-.review_box span {
+.selling_product_frame .review_box span {
   margin-left: 10px;
   color: var(--Color-Text-Light, #626974);
 
@@ -555,14 +596,14 @@ p {
   line-height: 22px; /* 157.143% */
 }
 
-.product_content_box .price_box {
+.selling_product_frame .product_content_box .price_box {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.price_box strong {
+.selling_product_frame .price_box strong {
   color: var(--Color-Text-Dark, #041e42);
 
   font-family: Jost;
@@ -572,7 +613,7 @@ p {
   line-height: normal;
 }
 
-.price_box span {
+.selling_product_frame .price_box span {
   margin-left: 13px;
   color: var(--Color-Text-Light, #626974);
   font-family: Jost;
