--- a/public/CSS/command.css
+++ b/public/CSS/command.css
@@ -645,3 +645,147 @@ p {
   font-weight: 500;
   line-height: normal;
 }
+
+/*  SPEC PRODUCT */
+
+.home_page .spec_product_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.spec_product_frame .container {
+  flex-direction: column;
+}
+.container .spec_product_wrapper {
+  margin-top: 35px;
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.spec_product_wrapper .big_product_box {
+  position: relative;
+  padding: 30px;
+  width: 664px;
+  height: 368px;
+
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  border-radius: 6px;
+  background: var(--Bg-4, #f3f5f6);
+}
+
+.big_product_box .big_product_content {
+  width: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.big_product_content span {
+  color: var(--Color-Text-Dark, #041e42);
+
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 146.667% */
+}
+
+.big_product_content p {
+  margin: 7px 0;
+  color: var(--Color-Text-Dark, #041e42);
+
+  font-family: Jost;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.big_product_content a {
+  color: var(--Color-Text-Dark, #041e42);
+  /* text-align: center; */
+
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.big_product_box img {
+  position: absolute;
+  width: 322px;
+  height: 309px;
+  right: 5%;
+}
+
+.spec_product_wrapper .smaall_product_wrapper {
+  margin-left: 30px;
+  width: 620px;
+  height: 368px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.smaall_product_wrapper .small_product_box {
+  padding: 30px;
+  width: 293px;
+  height: 170px;
+
+  display: flex;
+  flex-direction: row;
+  position: relative;
+
+  box-sizing: border-box;
+  border-radius: 6px;
+  background: var(--Bg-4, #f3f5f6);
+}
+
+.small_product_box:nth-child(odd){
+  margin-right: 30px;
+}
+
+.small_product_box .small_product_content{
+  display: flex;
+  flex-direction: column;
+}
+
+.small_product_content strong{
+color: var(--Color-Text-Dark, #041E42);
+
+font-family: Jost;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 28px; /
+}
+
+.small_product_content span{
+color: var(--Color-Text-Light, #626974);
+
+font-family: Jost;
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: 22px; 
+}
+
+.small_product_box img{
+position: absolute;  
+right: 10%;
+bottom: 13%;
+}
