--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -2,6 +2,17 @@
   display: flex;
   flex-direction: column;
 }
+.container .hover_border {
+  margin-top: 10px;
+  height: 2px;
+  width: 30px;
+  flex-shrink: 0;
+  align-self: stretch;
+
+  background: var(--Color-Text-Dark, #041e42);
+}
+
+/* HEADER */
 
 .header_frame {
   position: relative;
@@ -157,16 +168,6 @@
   font-weight: 400;
   line-height: 22px;
   letter-spacing: 0%;
-}
-
-.header_frame .box_left .hover_border {
-  margin-top: 10px;
-  height: 2px;
-  width: 30px;
-  flex-shrink: 0;
-  align-self: stretch;
-
-  background: var(--Color-Text-Dark, #041e42);
 }
 
 .header_frame .box_left .hover_border_2 {
