feat: complated tv section view

--- a/public/CSS/command.css
+++ b/public/CSS/command.css
@@ -22,6 +22,12 @@ p {
   align-items: center;
 }
 
+.container .category_top div{
+  display: flex;
+  flex-direction: row;
+
+}
+
 .container .category_top span {
   color: var(--Color-Text-Dark, #041e42);
 
@@ -34,6 +40,7 @@ p {
 }
 
 .container .category_top a {
+  margin-left: 30px;
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
@@ -92,6 +99,154 @@ p {
   justify-content: center;
   align-items: center;
 }
+
+.container .next_prev_box {
+  width: 25px;
+  cursor: pointer;
+  /* position: absolute;
+  left: 0%;
+  bottom: 23%; */
+}
+
+.container .next_prev_box img {
+  position: absolute;
+  top: 50%;
+  margin-left: 10px;
+}
+
+/* product card */
+.container .product_box {
+  width: 306px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  /* cursor: pointer; */
+}
+
+.container .product_content_box {
+  padding: 5px 22px;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.container .product_content_box .product_title {
+  color: var(--Color-Text-Light, #626974);
+  font-family: Jost;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 169.231% */
+  text-transform: uppercase;
+}
+
+.container .product_content_box .product_disc {
+  margin-top: 7px;
+  height: 56px;
+  overflow: hidden;
+  color: var(--Color-Text-Dark, #041e42);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px; /* 175% */
+}
+
+.container .product_content_box .review_box {
+  margin-top: 7px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .review_box img {
+  margin-left: 5px;
+}
+
+.container .review_box span {
+  margin-left: 10px;
+  color: var(--Color-Text-Light, #626974);
+
+  font-family: Jost;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+}
+
+.container .product_content_box .price_box {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .price_box strong {
+  color: var(--Color-Text-Dark, #041e42);
+
+  font-family: Jost;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.container .price_box span {
+  margin-left: 13px;
+  color: var(--Color-Text-Light, #626974);
+  font-family: Jost;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+  text-decoration-line: line-through;
+}
+.container .product_box .product_image_box {
+  width: 100%;
+  height: 280px;
+}
+
+.container .product_image_box .hover_box {
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.container .product_image_box:hover .hover_box {
+  display: flex;
+}
+
+.container .hover_box button {
+  margin-bottom: 10px;
+  width: 260px;
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  outline: none;
+
+  display: flex;
+  width: 262.126px;
+  padding: 15px 35px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  border-radius: 6px;
+  background: #0053f6;
+  box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
+}
+
 
 /* NAVBAR */
 
@@ -471,17 +626,6 @@ p {
   justify-content: space-between;
 }
 
-.selling_product_frame .product_wrapper .next_prev_box {
-  width: 25px;
-  cursor: pointer;
-}
-
-.selling_product_frame .next_prev_box img {
-  position: absolute;
-  top: 50%;
-  margin-left: 10px;
-}
-
 .selling_product_frame .product_wrapper .product_boxes {
   position: relative;
   width: 1224px;
@@ -491,138 +635,8 @@ p {
   flex-direction: row;
 }
 
-.selling_product_frame .product_boxes .product_box {
-  width: 306px;
-  height: 100%;
 
-  display: flex;
-  flex-direction: column;
-  /* cursor: pointer; */
-}
 
-.selling_product_frame .product_box .product_image_box {
-  width: 100%;
-  height: 280px;
-}
-
-.selling_product_frame .product_image_box .hover_box {
-  display: none;
-  width: 100%;
-  height: 100%;
-
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.selling_product_frame .product_image_box:hover .hover_box {
-  display: flex;
-}
-
-.selling_product_frame .hover_box button {
-  margin-bottom: 10px;
-  width: 260px;
-  height: 50px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  outline: none;
-
-  display: flex;
-  width: 262.126px;
-  padding: 15px 35px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-
-  border-radius: 6px;
-  background: #0053f6;
-  box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
-}
-
-.selling_product_frame .product_box .product_content_box {
-  padding: 5px 22px;
-  width: 100%;
-  height: auto;
-  box-sizing: border-box;
-}
-
-.selling_product_frame .product_content_box .product_title {
-  color: var(--Color-Text-Light, #626974);
-  font-family: Jost;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px; /* 169.231% */
-  text-transform: uppercase;
-}
-
-.selling_product_frame .product_content_box .product_disc {
-  margin-top: 7px;
-  height: 56px;
-  overflow: hidden;
-  color: var(--Color-Text-Dark, #041e42);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-
-  font-family: Jost;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 28px; /* 175% */
-}
-
-.selling_product_frame .product_content_box .review_box {
-  margin-top: 7px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.selling_product_frame .review_box img {
-  margin-left: 5px;
-}
-
-.selling_product_frame .review_box span {
-  margin-left: 10px;
-  color: var(--Color-Text-Light, #626974);
-
-  font-family: Jost;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px; /* 157.143% */
-}
-
-.selling_product_frame .product_content_box .price_box {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.selling_product_frame .price_box strong {
-  color: var(--Color-Text-Dark, #041e42);
-
-  font-family: Jost;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.selling_product_frame .price_box span {
-  margin-left: 13px;
-  color: var(--Color-Text-Light, #626974);
-  font-family: Jost;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px; /* 157.143% */
-  text-decoration-line: line-through;
-}
 
 /* ADV FRAME */
 
@@ -715,7 +729,6 @@ p {
 
 .big_product_content a {
   color: var(--Color-Text-Dark, #041e42);
-  /* text-align: center; */
 
   font-family: Jost;
   font-size: 15px;
@@ -734,7 +747,7 @@ p {
 .spec_product_wrapper .smaall_product_wrapper {
   margin-left: 30px;
   width: 620px;
-  height: 368px;
+  height: 395px;
 
   display: flex;
   flex-direction: row;
@@ -788,4 +801,57 @@ line-height: 22px;
 position: absolute;  
 right: 10%;
 bottom: 13%;
+}
+
+.home_page .tv_frame{
+  margin-top: 90px;
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row; 
+  justify-content: center;
+}
+
+.tv_frame .container{
+  flex-direction: column;
+}
+
+.container .tv_wrapper{
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_product_boxes{
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box{
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffff;
+}
+
+.product_box .product_image{
+  width: 100%;
+  height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
