--- a/public/CSS/command.css
+++ b/public/CSS/command.css
@@ -8,6 +8,10 @@ a {
   text-decoration: none;
 }
 
+.white_png{
+  filter: brightness(0) invert(1);
+}
+
 p {
   margin: 0;
 }
@@ -101,7 +105,7 @@ p {
 }
 
 .container .next_prev_box {
-  width: 25px;
+  width: 40px;
   cursor: pointer;
   /* position: absolute;
   left: 0%;
@@ -146,8 +150,8 @@ p {
   height: 56px;
   overflow: hidden;
   color: var(--Color-Text-Dark, #041e42);
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  /* text-overflow: ellipsis; */
+  /* white-space: nowrap; */
 
   font-family: Jost;
   font-size: 16px;
@@ -854,4 +858,144 @@ bottom: 13%;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+/* EVENT FRAME */
+
+.home_page .event_frame{
+  margin-top: 90px;
+  position: relative;
+  width: 100%;
+  height: 632px;
+
+  display: flex;
+  flex-direction: row; 
+  justify-content: center; 
+  background-image: url(../images/Shop/fon\ kok\ rasm.png);
+
+}
+
+.event_frame .container{
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container .event_content_box{
+  width: 340px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.event_content_box .event_title{
+  color: var(--Bg-White, #FFF);
+
+  font-family: Jost;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+  text-transform: capitalize;
+}
+
+.event_content_box .timer_wrapper{
+  margin: 30px 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.timer_wrapper .timer_box{
+  width: 82px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.timer_box strong{
+  color: var(--Bg-White, #FFF);
+
+  font-family: Jost;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.timer_box span{
+  color: var(--Bg-White, #FFF);
+
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px; 
+}
+
+.event_content_box a{
+  width: 140px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+
+  border-radius: 6px;
+  border: 1px solid var(--Bg-White, #FFF);
+  background: var(--Bg-White, #FFF);
+  width: 141.794px;
+  padding: 15px 35px;
+  gap: 10px;
+}
+
+.container .event_product_wrapper{
+  width: 930px;
+  height: auto;
+
+  display: flex;
+  flex-direction: row ;
+}
+
+.event_product_wrapper .event_product_boxes{
+  width: auto;
+  height: auto;
+  position: relative;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.event_product_boxes .event_product_box{
+  margin-right: 8px;
+  width: 205px;
+  height: 392px;
+
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  border-radius: 6px;
+  background-color: #ffff;
+
+}
+
+.event_product_box .event_product_images{
+  width: 100%;
+  height: 220px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.event_product_images a{
+  width: auto;
+  height: auto;
+
 }
